Fixed Overflow error

--- a/src/stylesheets/_peerPage.scss
+++ b/src/stylesheets/_peerPage.scss
@@ -10,6 +10,11 @@ $importantTextColor: #12486b;
     background-color: $backgroundColor;
     padding: 40px;
 
+    width: 100%;
+    height: 100%;
+
+    @include helper.noScrollbar;
+
     // .map-container{
     //     @include helper.centerHorizontal;
     //     margin-top: 50px;
